# memvid_v2

./: .env.example  .gitignore  CLAUDE.md  Memvid_colab.ipynb  README.md  USAGE.md  main.py  pyproject.toml  requirements.txt  setup.py  streamlit_chat.py
.claude/: settings.local.json
.github/workflows/: build_pythin.yaml
docker/: resource_monitor.py
docker/scripts/: test_encoding.py
examples/: .env.local  book_chat.py  build_memory.py  chat_memory.py  chat_memory_fixed.py  chat_memory_qwen3.py  codec_comparison.py  file_chat.py  simple_chat.py  soccer_chat.py  test_new_providers.py  test_pdf_processors.py
memvid/: chat.py  config.py  database.py  docker_manager.py  encoder.py  index.py  interactive.py  llm_client.py  retriever.py  utils.py
memvid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_chat.py  test_database.py  test_encoder.py  test_index.py  test_integration.py  test_retriever.py  test_utils.py
