[project]
name = "memvid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic~=0.52.1",
    "beautifulsoup4>=4.13.4",
    "ebooklib>=0.19",
    "faiss-cpu==1.11.0",
    "google-generativeai==0.8.5",
    "numpy==1.26.4",
    "openai==1.82.0",
    "opencv-contrib-python==4.11.0.86",
    "opencv-python==4.11.0.86",
    "pillow==11.2.1",
    "pypdf2==3.0.1",
    "python-dotenv==1.1.0",
    "qrcode[pil]==8.2",
    "sentence-transformers==4.1.0",
    "tqdm==4.67.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
